# routes/api/asset/index.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const Asset = require('../../../models/asset');
 
 // Search assets.
-router.get('/', (req, res) => {
+router.get('/', (req, res, next) => {
 
   let query = {};
 
@@ -14,33 +14,30 @@ router.get('/', (req, res) => {
   Asset.search(query)
     .then((asset) => {
       res.json(asset);
-    });
+    })
+    .catch(next);
 
 });
 
 // Get an asset by id
-router.get('/:id', (req, res) => {
+router.get('/:id', (req, res, next) => {
 
   Asset.findById(req.params.id)
     .then((asset) => {
       res.json(asset);
-    });
+    })
+    .catch(next);
 
 });
 
 // Upsert an asset and return the affected document.
-router.put('/', (req, res) => {
+router.put('/', (req, res, next) => {
 
   Asset.upsert(req.body)
     .then((asset) => {
-
       res.json(asset);
-
     })
-    .catch((err) => {
-      console.error(err);
-      res.json(err);
-    });
+    .catch(next);
 
 });
 
